[package]
name = "broken-escalators"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
log = "*"
serde= "*"
amethyst_test= "*"

[dependencies.amethyst]
version = "0.15.0"
default-features = false

[features]
default = ["empty"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
